--- a/pom.xml
+++ b/pom.xml
@@ -9,15 +9,27 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
+        <!-- Utils -->
+        <commons.lang3.version>3.5</commons.lang3.version>
+        
+        <!-- Unit test -->
         <junit.version>4.12</junit.version>
     </properties>
     
     <dependencies>
+        <!-- Unit test -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>${junit.version}</version>
-        </dependency>    
+        </dependency>
+
+        <!-- Utils -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${commons.lang3.version}</version>
+        </dependency>
     </dependencies>
     
     
