--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
         
         <!-- Unit test -->
         <junit.version>4.12</junit.version>
+
+        <java.version>1.8</java.version>
     </properties>
     
     <dependencies>
@@ -31,7 +33,21 @@
             <version>${commons.lang3.version}</version>
         </dependency>
     </dependencies>
-    
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.6.0</version>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     
 
 </project>
